--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,166 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
+.container{
+  min-width: 100vw;
+  width: 100%;
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  background: rgb(85, 107, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer {
+.title{
+  max-width: 1000px;
+  width: 100%;
+  border-radius: 6px 6px 0 0;
+  background: white;
+}
+
+.wrapper {
+  /* padding: 0 2rem; */
+  background-color: white;
+  max-width: 1000px;
+  width: 100%;
+  border-radius: 0 0 6px 6px;
+  height: 75vh;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+  padding: 1rem;
   text-align: center;
+  line-height: 1.15;
+  font-size: 2.5rem;
+  font-weight: 500;
+  border-bottom: 1px solid gray;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.chat_box{
+  min-width: 100% !important;
+  height: 100% !important;
+  display: flex;
+  flex: 1;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.chat_box .chat_box_left{
+  max-width: 200px;
+  width: 100%;
 }
 
-.grid {
+.chat_box .chat_title{
+  font-size: 1.2rem;
+  padding: 0.5rem 1.2rem;
+}
+
+.chat_box .chat_box_middle{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat_box .chat_room{
+    font-size: 1.6rem;
+    font-weight: 500;
+    border-bottom: 1px solid lightgray;
+    padding: 1rem;
+}
+
+.chat_box .chat_messages{
+  flex: 1;
+  overflow-y: auto;
+}
+
+.chat_box .alert_message{
+  text-align: center;
+  color: gray;
+  font-size: 15px;
+  margin: 1rem 0;
+}
+
+.chat_box .chat_message {
   display: flex;
   align-items: center;
+  padding: 5px 15px;
+  margin: 0.5rem 0;
+}
+
+.chat_box .chat_own_message{
+  justify-content: end;
+}
+
+.chat_box .chat_own_message .chat_profile{
+  order: 2;
+  margin-right: 0;
+  margin-left: 15px;
+}
+
+.chat_box .chat_own_message .chat_info{
+  align-items: flex-end;
+}
+
+.chat_box .chat_own_message .chat_info .chat_text_wrapper{
+  width: 100%;
+  max-width: 70%;
+  text-align: right;
+}
+
+.chat_message .chat_profile {
+  min-width: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  /* margin-top: 10px; */
+  margin-right: 15px;
+  background-color: rgb(113 113 255);
+  display: flex;
+  color: white;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
+  align-items: center;
   font-size: 1.5rem;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.chat_message .chat_info {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.chat_message .user_name {
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 3px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.chat_message .chat_text {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #dadada;
+  color: #434546;
+  max-width: 70%;
+  word-break: break-all;
+  display: inline-block;
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.chat_box .chat_input_box{
+  background: white;
+  border-top: 1px solid #c0c0c0;
+  border-radius: 2px;
+  position: sticky;
+  bottom: 0;
+}
+
+.chat_box .chat_input_box input{
+  width: 90%;
+  padding: 1rem;
+  font-size: 16px;
+  outline: none;
+  border: none;
+}
+
+.chat_box .chat_box_right{
+  max-width: 250px;
+  width: 100%;
 }
