--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,128 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+*{
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+h2{
+  font-weight: 100;
 }
+nav{
+  text-align: center;
+  background-color: blueviolet;
+  padding: 10px;
+  color: white;
+}
+
+.container{
+  max-width: 1000px;
+  margin: 100px auto 50px;
+  padding: 20px;
+}
+
+.chatbox{
+  height: 500px;
+  list-style: none;
+  display: flex;
+  flex-flow: column;
+  background: #eee;
+  border-radius: 6px;
+
+  box-shadow: 1px 0px 10px #eee;
+}
+#messagelist{
+  flex: 1;
+  overflow-y: scroll;
+
+}
+
+#messagelist li{
+  background: white;
+  max-width: 200px;
+  padding: 10px;
+  margin: 10px;
+}
+
+#messagelist p:first-child{
+  color: purple;
+}
+
+
+form.Input{
+  display: flex;
+}
+
+
+/* form.Input input{
+  flex: 10;
+  padding: 14px 10px;
+  border: none;
+}
+form.Input button{
+  padding: 4px;
+  background: teal;
+  border: none;
+  flex: 1;
+  color: white;
+  cursor: pointer;
+} */
+
+#users{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100px;
+  overflow-y: scroll;
+  flex-flow: row;
+  padding-top: 20px;
+}   
+
+#users li{
+  min-width: 100px;
+  max-height: 20px;
+  border-radius: 10px;
+  background: white;
+  text-align: center;
+  box-shadow: 0px 2px 10px #eee;
+  
+}
+
+
+.backdrop{
+  background: rgba(0,0,0,.5);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  top: 0;
+  cursor: pointer;
+}
+.modal.disappear{
+  display: none;
+}
+.backdrop.disappear{
+  display: none;
+}
+
+
+
+/* .modal input{
+  margin-top: 20px;
+  width: 100%;
+  border: none;
+  padding: 20px;
+  border: 1px solid #eee;
+} */
+
+/* .modal button{
+  display: block;
+  margin-top: 30px;
+  padding: 14px;
+  background: teal;
+  border: none;
+  flex: 1;
+  color: white;
+  cursor: pointer;
+  width: 100%;
+} */
