--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .container{
-  min-width: 100vw;
   width: 100%;
   min-height: 100vh;
   background: rgb(85, 107, 255);
@@ -140,7 +139,6 @@
   background-color: #dadada;
   color: #434546;
   max-width: 70%;
-  word-break: break-all;
   display: inline-block;
 }
 
@@ -163,4 +161,47 @@
 .chat_box .chat_box_right{
   max-width: 250px;
   width: 100%;
+}
+
+.chat_box .chat_typing{
+  padding: 10px;
+  width: 80px;
+  height: 35px;
+  border-radius: 7px;
+  background-color: #dadada;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.chat_box .chat_typing_dot:nth-child(n){
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #969393;
+  animation: typing 1s infinite ease-in-out;
+}
+
+.chat_box .chat_typing_dot:nth-child(1) {
+  animation-delay: 100ms;
+}
+
+.chat_box .chat_typing_dot:nth-child(2) {
+  animation-delay: 200ms;
+}
+
+.chat_box .chat_typing_dot:nth-child(3) {
+  animation-delay: 300ms;
+}
+
+@keyframes typing {
+  0% {
+    transform: translateY(0px);
+  }
+  28% {
+    transform: translateY(-4px);
+  }
+  44% {
+    transform: translateY(0px);
+  }
 }
